[package]
name = "cover-circuit"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
plonky2 = { git = "https://github.com/neatsys/plonky2", version = "0.2.1" }
plonky2_maybe_rayon = { git = "https://github.com/neatsys/plonky2", version = "0.2.0" }
plonky2_u32 = { git = "https://github.com/neatsys/plonky2-u32", version = "0.1.0" }
tracing = "0.1.40"
log = "0.4.21"
# plonky2_ecdsa = { git = "https://github.com/neatsys/plonky2-ecdsa", version = "0.1.0", features = ["parallel"] }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
